fix spacing issues in code

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,20 @@
 /*font-family: 'IM Fell DW Pica', serif;
-font-family: 'Chau Philomene One', sans-serif;
-font-family: 'Rokkitt', serif;*/
+ font-family: 'Chau Philomene One', sans-serif;
+ font-family: 'Rokkitt', serif;
+*/
 
 /** {
-  border: solid 1px pink;
-}*/
+     border: solid 1px pink;
+}
+*/
 
 body {
-   /*background: linear-gradient(to top, #463b59, #373338);*/
-    background: linear-gradient(to top, #200526, #1d0023);
-   /*background: #200526;*/
+  /*background: linear-gradient(to top, #463b59, #373338);
+    */
+  background: linear-gradient(to top, #200526, #1d0023);
+  /*background: #200526;
+    */
 }
-
 p {
   font-size: 18px;
   line-height: 20px;
@@ -23,21 +26,19 @@ H1 {
   font-family: 'Oswald', sans-serif;
 }
 .center {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-    margin-top: -50px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  margin-top: -50px;
 }
-
 h3 {
   letter-spacing: 1px;
 }
-
 /*Makes form area smaller, but does not account for form titles*/
+
 .form-control {
   width: 50%;
 }
-
 .btn-md {
   font-family: sans-serif;
   background-color: #320038;
@@ -49,28 +50,25 @@ h3 {
   border-radius: 10px;
 }
 .btn-md:hover {
-  /*background-color: inherit;*/
+  /*background-color: inherit;
+    */
   background-color: #200526;
   color: rgba(255, 255, 255, 1);
   transition: .75s;
   cursor: pointer;
   border-radius: 10px;
 }
-
 .col-md-4 {
   padding-left: 20px;
   padding-right: 20px;
 }
-
 #chordbutton {
   margin-top: 20px;
 }
-
 .formbutton {
   display: flex;
   flex-direction: column;
 }
-
 .form {
   height: auto;
   display: flex;
@@ -87,11 +85,7 @@ h3 {
 .form h1 {
   text-align: center;
 }
-
-.left {
-
-}
-
+.left {}
 .input {
   height: auto;
 }
@@ -102,14 +96,12 @@ h3 {
   box-shadow: 15px 15px 70px rgba(10, 10, 10, .5);
 }
 .home {
-
   background-image: url('../img/music.jpg');
   background-position: right;
   background-size: contain;
   background-repeat: no-repeat;
   background-color: #320038;
 }
-
 .home h2 {
   font-family: 'Oswald', sans-serif;
   font-size: 100px;
@@ -121,12 +113,10 @@ h3 {
   background-repeat: no-repeat;
   background-color: #320038;
 }
-
 .jazz h2 {
   font-family: 'Caveat', cursive;
   font-size: 180px;
 }
-
 .blues {
   background-image: url('../img/blues.jpg');
   background-position: right;
@@ -134,12 +124,10 @@ h3 {
   background-repeat: no-repeat;
   background-color: #320038;
 }
-
 .blues h2 {
   font-family: 'Caveat', cursive;
   font-size: 140px;
 }
-
 .pop {
   background-image: url('../img/pop.jpg');
   background-position: right;
@@ -147,13 +135,11 @@ h3 {
   background-repeat: no-repeat;
   background-color: #320038;
 }
-
 .pop h2 {
   font-family: 'Passion One', cursive;
   font-size: 100px;
   letter-spacing: 4px;
 }
-
 .punk {
   background-image: url('../img/punk.jpg');
   background-position: right;
@@ -161,12 +147,10 @@ h3 {
   background-repeat: no-repeat;
   background-color: #320038;
 }
-
 .punk h2 {
   font-family: 'IM Fell DW Pica', serif;
   font-size: 180px;
 }
-
 .metal {
   background-image: url('../img/metal.jpg');
   background-position: right;
@@ -174,12 +158,10 @@ h3 {
   background-repeat: no-repeat;
   background-color: #320038;
 }
-
 .metal h2 {
   font-family: 'IM Fell DW Pica', serif;
   font-size: 180px;
 }
-
 .rock {
   background-image: url('../img/rock.jpg');
   background-position: right;
@@ -187,21 +169,17 @@ h3 {
   background-repeat: no-repeat;
   background-color: #320038;
 }
-
 .rock h2 {
   font-family: 'IM Fell DW Pica', serif;
   font-size: 180px;
 }
-
 .container-fluid {
   margin: 30px;
 }
-
 #jazz, #blues, #pop, #punk, #metal, #rock {
   margin-bottom: 100px;
   display: none;
 }
-
 #home {
   margin-bottom: 100px;
 }
@@ -216,7 +194,6 @@ h3 {
   height: 75px;
   width: auto;
 }
-
 #generator {
   display: none;
 }
@@ -235,7 +212,6 @@ h4 {
   border-bottom-width: 0px;
   border-radius: 10px;
 }
-
 h4:hover {
   color: rgba(255, 255, 255, 1);
   transition: .75s;
@@ -245,43 +221,61 @@ h4:hover {
   border-radius: 10px;
 }
 .selected {
-    color: rgba(255, 255, 255, 1);
-    border-bottom-style: outset;
-    border-bottom-width: 1px;
-    padding-bottom: 7px;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, .05);
+  color: rgba(255, 255, 255, 1);
+  border-bottom-style: outset;
+  border-bottom-width: 1px;
+  padding-bottom: 7px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, .05);
 }
-
 .display {
   color: transparent;
   font-size: 0;
 }
 /*#head {
-  margin-bottom: 100px;
-  font-family: sans-serif;
-  color: rgba(255, 255, 255, 0.6);
-  text-align: center;
-}*/
+     margin-bottom: 100px;
+     font-family: sans-serif;
+     color: rgba(255, 255, 255, 0.6);
+     text-align: center;
+}
+*/
 
 .col-md-8 span {
-    opacity: 0;
-    transition: opacity 1300ms
+  opacity: 0;
+  transition: opacity 1300ms
 }
-
-.col-md-8 span:nth-child(1)  { transition-delay:  200ms }
-.col-md-8 span:nth-child(2)  { transition-delay: 1200ms }
-.col-md-8 span:nth-child(3)  { transition-delay:  800ms }
-.col-md-8 span:nth-child(4)  { transition-delay:  300ms }
-.col-md-8 span:nth-child(5)  { transition-delay:  700ms }
-.col-md-8 span:nth-child(6)  { transition-delay:  600ms }
-.col-md-8 span:nth-child(7)  { transition-delay:  400ms }
-.col-md-8 span:nth-child(8)  { transition-delay:  900ms }
-.col-md-8 span:nth-child(9)  { transition-delay:  700ms }
-.col-md-8 span:nth-child(10) { transition-delay:   50ms }
-
+.col-md-8 span:nth-child(1) {
+  transition-delay: 200ms
+}
+.col-md-8 span:nth-child(2) {
+  transition-delay: 1200ms
+}
+.col-md-8 span:nth-child(3) {
+  transition-delay: 800ms
+}
+.col-md-8 span:nth-child(4) {
+  transition-delay: 300ms
+}
+.col-md-8 span:nth-child(5) {
+  transition-delay: 700ms
+}
+.col-md-8 span:nth-child(6) {
+  transition-delay: 600ms
+}
+.col-md-8 span:nth-child(7) {
+  transition-delay: 400ms
+}
+.col-md-8 span:nth-child(8) {
+  transition-delay: 900ms
+}
+.col-md-8 span:nth-child(9) {
+  transition-delay: 700ms
+}
+.col-md-8 span:nth-child(10) {
+  transition-delay: 50ms
+}
 body:hover span {
-    opacity: .75
+  opacity: .75
 }
 .btn-md:active {
   background-color: #200526;
